# MemX

./: CMakeLists.txt
Example/: CMakeLists.txt  main.cpp
MemX/: CMakeLists.txt
MemX/Common/NtApi/: Bootstrap.h  NtApi.h  NtApiResolver.h  NtCallExt.cpp  NtCallExt.h  NtStructures.h
MemX/Common/Types/: Type.h
MemX/Common/Utils/: StringUtils.h  Utils.h  Wow64Utils.h
MemX/Common/WinApi/: ArchitectureApi.h  WinHeaders.h
MemX/Process/: Process.cpp  Process.h  ProcessCore.cpp  ProcessCore.h  ProcessMemory.cpp  ProcessMemory.h  ProcessModule.cpp  ProcessModule.h  ProcessWindow.cpp  ProcessWindow.h
MemX/Runtime/: Runtime.h  Wow64Runtime.cpp  Wow64Runtime.h  X64Runtime.cpp  X64Runtime.h
